# fal-app-template

./: .gitignore  README.md  pyproject.toml
app/: fal_app.py
